Test commit revert

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Wetterstationen Tirol Beispiel Test</title>
+    <title>Wetterstationen Tirol Beispiel</title>
 
     <!-- Stationsicon als favicon -->
     <link rel="shortcut icon" href="icons/wifi.png" type="image/png">
