--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js'></script>
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css' rel='stylesheet' />
 
-    <!-- eigene Stile, Farben mit Schweelen und Hauptskript -->
+    <!-- eigene Stile, Farben mit Schwellen und Hauptskript -->
     <link rel="stylesheet" href="main.css">
     <script src="colors.js"></script>
     <script defer src="main.js"></script>
@@ -38,7 +38,11 @@
                 <h2><i class="fa-solid fa-cloud-sun-rain"></i> Wetterstationen Tirol Beispiel</h2>
             </div>
             <nav>
-                <i class="fab fa-github"></i> <a href="https://github.com/webmapping/aws-tirol">Github</a>
+                <i class="fab fa-github"></i> <a href="https://github.com/webmapping/aws-tirol">Github</a> |
+                <i class="fa-solid fa-book-open-reader"></i> Howto
+                    <a href="https://webmapping.github.io/aws-tirol/howto1" title="Basiskarte mit Stationen">1</a>,
+                    <a href="https://webmapping.github.io/aws-tirol/howto2" title="Temperatur Layer erzeugen und weitere Layer">2</a>,
+
             </nav>
         </header>
         <article>
