fix paths to webmapping22s

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                 <h2><i class="fa-solid fa-cloud-sun-rain"></i> Wetterstationen Tirol Beispiel</h2>
             </div>
             <nav>
-                <i class="fab fa-github"></i> <a href="https://github.com/webmapping/aws-tirol">Github</a> |
+                <i class="fab fa-github"></i> <a href="https://github.com/webmapping22s/aws-tirol">Github</a> |
                 <i class="fa-solid fa-book-open-reader"></i> Howto
-                    <a href="https://webmapping.github.io/aws-tirol/howto1" title="Basiskarte mit Stationen und Popup">1</a>,
-                    <a href="https://webmapping.github.io/aws-tirol/howto2" title="Temperatur Layer mit L.divIcon() und COLORS Objekt">2</a>,
-                    <a href="https://webmapping.github.io/aws-tirol/howto3" title="Layer Schneehöhen, Relative Luftfeuchtigkeit & Windstärke">3</a>,
-                    <a href="https://webmapping.github.io/aws-tirol/howto4" title="Leaflet.Rainviewer">4</a>
+                    <a href="https://webmapping22s.github.io/aws-tirol/howto1" title="Basiskarte mit Stationen und Popup">1</a>,
+                    <a href="https://webmapping22s.github.io/aws-tirol/howto2" title="Temperatur Layer mit L.divIcon() und COLORS Objekt">2</a>,
+                    <a href="https://webmapping22s.github.io/aws-tirol/howto3" title="Layer Schneehöhen, Relative Luftfeuchtigkeit & Windstärke">3</a>,
+                    <a href="https://webmapping22s.github.io/aws-tirol/howto4" title="Leaflet.Rainviewer">4</a>
 
             </nav>
         </header>
